creusot/tests/should_fail/prusti/blocked_lifetime/trait.stderr
error[creusot]: invalid mut dereference of expression with home `'old` and lifetime `'x` at time-slice `'curr`
 --> trait.rs:6:16
  |
6 |     #[ensures(*x == 5u32)]
  |                ^

error: aborting due to previous error

